# CourseWorkOOP

./: README.md  main.py  pyproject.toml  settings.py
src/: api_classes.py  file_saver.py  funcs.py  vacancy.py
